--- a/public/css/index.css
+++ b/public/css/index.css
@@ -34,6 +34,8 @@ body{
     top: 50%;
     left: 50%;
     transform: translate(-50%,-50%);
+    max-width: 900px;
+    width: 100%;
 }
 .mdl-card-login{
 	-webkit-box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
@@ -72,4 +74,16 @@ body{
 
 .mdl-input .mdl-textfield{
 	width: 100%;
+}
+.mdl-textfield--floating-label.is-focused .mdl-textfield__label, 
+.mdl-textfield--floating-label.is-dirty .mdl-textfield__label, 
+.mdl-textfield--floating-label.has-placeholder .mdl-textfield__label{
+	color: #000000;
+}
+.mdl-textfield__label:after{
+	background-color: #000000;
+	bottom: 14px;
+}
+.mdl-textfield__input{
+	font-family: 'RobotoRegular';
 }
