--- a/public/css/index.css
+++ b/public/css/index.css
@@ -93,6 +93,7 @@ body{
     display: inline-block;
     width: 100%;
     margin: 3px;
+    box-shadow: 0 2px 2px 0 rgba(0,0,0,.14), 0 3px 1px -2px rgba(0,0,0,.2), 0 1px 5px 0 rgba(0,0,0,.12);
 }
 .mdl-card-fecha .mdl-card__supporting-text{
 	width: 100%;
@@ -112,4 +113,7 @@ body{
     font-family: 'RobotoRegular';
     height: 30px;
     line-height: 30px;
+}
+.container.relative{
+	position: relative;
 }
