--- a/public/css/index.css
+++ b/public/css/index.css
@@ -38,6 +38,26 @@ body{
     width: 100%;    
     padding: 10px;
 }
+.logo-home{
+	text-align: right;
+	margin-top: 50px;
+}
+.logo-home img{
+	max-width: 250px;
+}
+.nombres{
+	color: #017159;
+}
+.nombres p{
+    font-family: 'RobotoRegular';
+    font-size: 40px;
+    margin: 0;
+}
+.nombres h2{
+    font-family: 'RobotoBold';
+    margin: 5px 0 30px 0;
+    font-size: 50px;
+}
 .mdl-card-login{
 	-webkit-box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
 	box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
@@ -108,35 +128,96 @@ body{
 }
 /*CARDS-FECHAS*/
 .mdl-card-fecha{
-    max-width: 140px;
+    max-width: 165px;
     display: inline-block;
     width: 100%;
-    margin: 3px;
+    margin: 2px;
     box-shadow: 0 2px 2px 0 rgba(0,0,0,.14), 0 3px 1px -2px rgba(0,0,0,.2), 0 1px 5px 0 rgba(0,0,0,.12);
+    background-color: #FFFFFF;
+    border-radius: 10px;
+    height: 100%;
+    min-height: 100%;
+    padding: 10px 0;
+}
+.mdl-card-fecha .fecha{
+    position: absolute;
+    background-color: #000000;
+    color: #FFFFFF;
+    top: 0;
+    left: 15px;
+    padding: 2px 5px;
+    display: none;
+    font-size: 13px;
+    vertical-align: middle;
+    border-bottom-left-radius: 6px;
+    border-top-right-radius: 6px;
+}
+.mdl-card-fecha .fecha i{
+    font-size: 14px;
+    color: #FFFFFF;
+    vertical-align: middle;
+    margin-right: 5px;
+}
+.mdl-card-fecha:nth-child(1) .fecha{
+	display: block;
 }
 .mdl-card-fecha .mdl-card__supporting-text{
 	width: 100%;
-	text-align: center;
+	text-align: right;
+    padding: 0 16px;
 }
 .mdl-card-fecha .mdl-card__supporting-text p{
-	font-size: 20px;
-	font-family: 'RobotoRegular';
-	margin: 0;
+	font-size: 18px;
+    font-family: 'RobotobOLD';
+    margin: 0;
+    color: #000000;
+    text-align: left;
+    line-height: 18px;
 }
 .mdl-card-fecha .mdl-card__actions{
-	padding: 16px;
+	padding: 0 10px;
 }
 .mdl-card-fecha .mdl-card__actions button{
-    width: 100%;
     text-transform: inherit;
-    font-family: 'RobotoRegular';
+    font-family: 'RobotoBold';
     height: 30px;
     line-height: 30px;
+    box-shadow: none;
+    background-color: transparent;
+    border-radius: 10px;
+    padding: 5px 0;
+    line-height: 13px;
+    height: 24px;
+    font-size: 13px;
+    -webkit-transition: background-color .3s linear, color .3s linear;
+    -moz-transition: background-color .3s linear, color .3s linear;
+    -ms-transition: background-color .3s linear, color .3s linear;
+    -o-transition: background-color .3s linear, color .3s linear;
+    transition: background-color .3s linear, color .3s linear;
+}
+.mdl-card-fecha .mdl-card__actions button:HOVER{
+	background-color: #000000;
+	color: #FFFFFF;
 }
 .container.relative{
 	position: relative;
+	max-width: 1045px;
 }
-
+.mdl-card__supporting-text .nombre-evento{
+	height: 40px;
+    position: relative;
+}
+.mdl-card__supporting-text .nombre-evento p{
+	position: absolute;
+	bottom: 0;
+}
+.mdl-card__supporting-text span i{
+	vertical-align: middle;
+    font-size: 20px;
+}
+.mdl-card__supporting-text span i.second{
+	margin-left: -15px;
+}
 @media ( max-width: 768px ){
 	.mdl-card-login .mdl-card__supporting-text{
 		float: none;
