--- a/public/css/index.css
+++ b/public/css/index.css
@@ -210,7 +210,7 @@ body{
     box-shadow: none;
     background-color: transparent;
     border-radius: 10px;
-    padding: 5px 0;
+    padding: 5px 10px;
     line-height: 13px;
     height: 24px;
     font-size: 13px;
