--- a/public/css/index.css
+++ b/public/css/index.css
@@ -85,6 +85,15 @@ body{
 	font-size: 24px;
 	font-family: 'RobotoLight';
 }
+.mdl-card-login .mdl-card__title p.reservation{
+	font-size: 18px;
+    font-family: 'RobotoRegular';
+    color: #01a982;
+    position: absolute;
+}
+p.reservation{
+	color: #01a982;
+}
 .mdl-card-login .mdl-card__supporting-text{
 	background-color: #FFFFFF;
 	width: 100%;
@@ -192,7 +201,7 @@ body{
 }
 .mdl-card-fecha .mdl-card__supporting-text{
 	width: 100%;
-	text-align: right;
+	text-align: left;
     padding: 0 12px;
 }
 .mdl-card-fecha .mdl-card__supporting-text p{
@@ -218,14 +227,14 @@ body{
     line-height: 13px;
     height: 24px;
     font-size: 13px;
-    -webkit-transition: background-color .3s linear, color .3s linear;
-    -moz-transition: background-color .3s linear, color .3s linear;
-    -ms-transition: background-color .3s linear, color .3s linear;
-    -o-transition: background-color .3s linear, color .3s linear;
-    transition: background-color .3s linear, color .3s linear;
+    -webkit-transition: background-color .3s linear, color .2s linear;
+    -moz-transition: background-color .3s linear, color .2s linear;
+    -ms-transition: background-color .3s linear, color .2s linear;
+    -o-transition: background-color .3s linear, color .2s linear;
+    transition: background-color .3s linear, color .2s linear;
 }
 .mdl-card-fecha .mdl-card__actions button:HOVER{
-	background-color: #000000;
+	background-color: #01a982;;
 	color: #FFFFFF;
 }
 .mdl-card-fecha .mdl-card__actions button[disabled]:HOVER{
@@ -338,5 +347,8 @@ body{
 	}
 	.logo-home{
 		text-align: center;
+	}
+	.fondo-imagen{
+		display: none;
 	}
 }
