--- a/public/css/index.css
+++ b/public/css/index.css
@@ -267,7 +267,63 @@ p.reservation{
 .mdl-card__supporting-text span i.second{
 	margin-left: -15px;
 }
-
+/*MODALS*/
+.modal.fade .modal-dialog{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    -o-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    opacity: 0;
+    width: -moz-fit-content;
+    width: -webkit-fit-content;
+    width: fit-content;
+    height: -moz-fit-content;
+    height: -webkit-fit-content;
+    height: fit-content;
+    margin: auto;
+    -webkit-transition: all 0.3s ease;
+    -moz-transition: all 0.3s ease;
+    -o-transition: all 0.3s ease;
+    transition: all 0.3s ease;
+    max-width: 300px;
+    width: 100%;
+}
+.modal.fade.in .modal-dialog{
+	opacity: 1;
+    -webkit-transform: scale(1);
+    -ms-transform: scale(1);
+    -o-transform: scale(1);
+    transform: scale(1);
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    -o-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+}
+.modal.fade .modal-dialog .modal-content{
+	border-radius: 10px;
+}
+.modal.fade .modal-dialog .mdl-card{
+	width: 100%;
+	border-radius: 10px;
+}
+.modal.fade .modal-dialog .mdl-card h2{
+	font-family: 'RobotoBold';
+    font-size: 44px;
+}
+.modal.fade .modal-dialog .mdl-card .mdl-card__actions{
+	padding: 16px;
+}
+.modal.fade .modal-dialog .mdl-card .mdl-card__actions button{
+	border-radius: 15px;
+    font-family: 'RobotoRegular';
+    text-transform: inherit;
+    height: 32px;
+    line-height: 24px;
+    padding: 0 25px;
+}
 /*BARRA SCROLL*/
 ::-webkit-scrollbar {
 	width: 5px;
@@ -347,8 +403,5 @@ p.reservation{
 	}
 	.logo-home{
 		text-align: center;
-	}
-	.fondo-imagen{
-		display: none;
 	}
 }
